--- a/week_02_day_02_basics/index.html
+++ b/week_02_day_02_basics/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Week_02_day_01</title>
+  <title>Week 2 Day 2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <script src="04_splice.js"></script>
+  <script src="exercise_00_repetition.js"></script>
 </body>
 </html>
