--- a/week_04_day_01_dom/exercise_01/index.html
+++ b/week_04_day_01_dom/exercise_01/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+  <script src="code.js"></script>
   <!-- Link the provided script file to this HTML file -->
 </body>
 </html>
