added week 4, updated readme

--- a/week_04_day_02_dom/dom_02/index.html
+++ b/week_04_day_02_dom/dom_02/index.html
@@ -64,6 +64,6 @@
     </small>
     
   </footer>
-  <script src="selection_style.js"></script>
+  <script src="part-1.js"></script>
 </body>
 </html>
